Fixed label role flag